Source/WebKit2/NetworkProcess/NetworkResourceLoader.h
@@ -57,7 +57,8 @@ public:
     CoreIPC::Connection* connection() const;
     uint64_t destinationID() const;
     
-    virtual void start();
+    virtual void start() OVERRIDE;
+    virtual void connectionToWebProcessDidClose() OVERRIDE;
         
     // ResourceHandleClient methods
     virtual void willSendRequest(WebCore::ResourceHandle*, WebCore::ResourceRequest&, const WebCore::ResourceResponse& /*redirectResponse*/) OVERRIDE;
@@ -94,10 +95,13 @@ public:
 private:
     NetworkResourceLoader(const NetworkResourceLoadParameters&, NetworkConnectionToWebProcess*);
 
-    void scheduleStopOnMainThread();
-    static void performStops(void*);
+    void scheduleCleanupOnMainThread();
+    static void performCleanups(void*);
+    void cleanup();
 
-    void resourceHandleStopped();
+    template<typename U> void sendAbortingOnFailure(const U& message);
+    template<typename U> bool sendSyncAbortingOnFailure(const U& message, const typename U::Reply& reply);
+    void abortInProgressLoad();
 
     RefPtr<RemoteNetworkingContext> m_networkingContext;
     RefPtr<WebCore::ResourceHandle> m_handle;    
